# book_counter

./: .gitignore  README.md  pyproject.toml  solution_simple_yolo.csv
nbs/: coco.ipynb  heuristic.ipynb  simple_yolo.ipynb
utils/: paddings.py  plot_images.py
